Fix scrollbar issue, update package.json

--- a/src/components/ChatList/chatList.scss
+++ b/src/components/ChatList/chatList.scss
@@ -36,6 +36,6 @@
 	}
 
 	&__chats {
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 }
