--- a/src/components/MessageArea/messageArea.scss
+++ b/src/components/MessageArea/messageArea.scss
@@ -21,7 +21,7 @@
 		display: flex;
 		flex: 1;
 		flex-direction: column-reverse;
-		overflow-y: scroll;
+		overflow-y: auto;
 		padding: 0 2rem;
 	}
 
